# Basic-OpenGL-Renderer

./: .gitignore  CMakeLists.txt  README.md  data.json  main.cpp
include/: Application.hpp
include/Assets/: JSONLoading.h
include/Input/: Input.h
include/Objects/: object.h
include/Renderer/: Renderer.h
include/Shaders/: shaders.h
include/Texture/: Texture.h
shaders/: float_vertex.glsl  pulse_fragment.glsl  standard_fragment.glsl  standard_vertex.glsl  texture_fragment.glsl
src/: app.cpp  application.cpp  errors.cpp  glad.cpp  input.cpp  jsonloader.cpp  object.cpp  renderer.cpp  shader.cpp  texture.cpp  window.cpp
